--- a/styles/style.css
+++ b/styles/style.css
@@ -6,15 +6,17 @@ html, body {
 
 .flashcard {
   margin: auto;
-  border: 3px solid darkgrey;
   padding: 10px;
   text-align: center;
   width: 45%;
-  height:60%;
-  background-color: lightgrey;
+  height:80%;
+  background-color: white;
   border-radius:25px;
   overflow: none;
   transition: all .3s;
+  -moz-box-shadow: 0 0 10px #ccc;
+  -webkit-box-shadow: 0 0 10px #ccc;
+  box-shadow: 0 0 10px #ccc;
 }
 
 .flashcard-collapsed {
@@ -33,19 +35,18 @@ html, body {
   width:12.5%;
   height:42.5%;
   background-color:rgb(239, 237, 237);
-  border-color:rgb(226, 226, 226);
-  border-style:solid;
   float:left;
   margin-left:1%;
-  border-radius:25px;
   overflow:hidden;
   position:fixed;
   text-align: center;
+  border-radius: 5px;
 }
 
 .flashcard-container {
   min-height: 200px;
   width:100%;
+  margin-top: 7%;
 }
 
 .moreinfo {
@@ -98,6 +99,7 @@ html, body {
 .full {
   width:100%;
   text-align:center;
+  margin-top:20%;
 }
 .ad {
   background-color:rgba(0,0,0,.5);
@@ -149,7 +151,7 @@ html, body {
 	position: fixed;
 	width: 100%;
 	height: 100vh;
-	background: #fff url('/loader.gif') no-repeat center center;
+	background: #fff url('https://lukaja21.github.io/Quizlit/loader.gif') no-repeat center center;
 	z-index: 9999;
 }
 
@@ -159,4 +161,25 @@ html, body {
 
 .logo-title {
 	margin-left:-10px;
+}
+
+.navbar-brand {
+  width:3%;
+}
+
+.container {
+  margin-top:7%;
+}
+
+.info-header {
+  font-size:25px;
+  margin-top:5%;
+}
+
+.pricing {
+  margin-top: -8%;
+}
+
+.changelog {
+  float:right;
 }
