--- a/styles/style.css
+++ b/styles/style.css
@@ -255,3 +255,10 @@ html, body {
   vertical-align: middle
   margin-left:10%;
 }
+
+.set-search {
+  max-height: 200px;
+  overflow: auto;
+  margin-left: -10%;
+  overflow-x: hidden;
+}
