--- a/styles/style.css
+++ b/styles/style.css
@@ -273,3 +273,59 @@ html, body {
   vertical-align: middle;
   margin-left: 5px;
 }
+
+.set-container-text-small{
+  font-size:15px;
+  padding: 5px;
+  padding-bottom: 0;
+  margin-top:-30px;
+}
+
+.set-container-text-medium{
+  font-size:17.5px;
+  margin-top:-25px;
+  padding: 5px;
+  padding-top:0;
+  padding-bottom: 0;
+  font-weight: bold;
+}
+.set-container-text-bottom {
+  font-size:15px;
+  padding-left: 5px;
+  margin-top:-20px;
+}
+
+.feed-container {
+  display: inline-block
+  width:100%;
+  height:10%;
+  background-color:white;
+  -moz-box-shadow: 0 0 10px #ccc;
+  -webkit-box-shadow: 0 0 10px #ccc;
+  box-shadow: 0 0 10px #ccc;
+  margin-top:3%;
+  font-size: 300%
+}
+
+.profile {
+  border-radius: 50% !important;
+  height:5%;
+  width:5%;
+  padding: 5px;
+}
+
+.feed-text {
+  font-size:15px;
+  padding: 3px;
+}
+
+.feed-content {
+  margin-top:-20px;
+}
+ .expand-button {
+  height:5%;
+  width:100%;
+  margin-top:-50px;
+  border:1px solid black;
+  position: relative;
+ }
