--- a/styles/style.css
+++ b/styles/style.css
@@ -165,7 +165,7 @@ html, body {
 }
 
 .navbar-brand {
-  width:3%;
+  width:30px;
 }
 
 .container {
@@ -298,7 +298,7 @@ html, body {
 .feed-container {
   display: inline-block
   width:100%;
-  height:10%;
+  height:90px;
   background-color:white;
   -moz-box-shadow: 0 0 10px #ccc;
   -webkit-box-shadow: 0 0 10px #ccc;
