--- a/styles/style.css
+++ b/styles/style.css
@@ -329,3 +329,32 @@ html, body {
   border:1px solid black;
   position: relative;
  }
+
+ .accesibility-button {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    background-color: midnightblue;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 50px;
+    color:white;
+    font-size: 25px;
+ }
+
+ .accesibility-menu {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  margin-right: 53px;
+  margin-bottom: 25px;
+  border-radius: 10%;
+  background-color: lightgrey;
+  height:30%;
+  width: 10%
+}
