--- a/styles/style.css
+++ b/styles/style.css
@@ -339,7 +339,7 @@ html, body {
     width: 50px;
     height: 50px;
     border-radius: 100%;
-    background-color: midnightblue;
+    background-color: rgb(75, 75, 75);
     text-align: center;
     vertical-align: middle;
     line-height: 50px;
