--- a/styles/style.css
+++ b/styles/style.css
@@ -8,8 +8,8 @@ html, body {
   margin: auto;
   padding: 10px;
   text-align: center;
-  width: 45%;
-  height:80%;
+  width: 45vw;
+  height: 50vh;
   background-color: white;
   border-radius:25px;
   overflow: none;
@@ -24,7 +24,7 @@ html, body {
 }
 
 .flashcard-text {
-  width: 100%; /*can be in percentage also.*/
+  width: 100vw; 
   line-height: 40vh;
   margin: auto;
   padding: 10px;
@@ -32,11 +32,11 @@ html, body {
 }
 
 .sidebar {
-  width:12.5%;
-  height:42.5%;
+  width:12.5vw;
+  height:42.5vh;
   background-color:rgb(239, 237, 237);
   float:left;
-  margin-left:1%;
+  margin-left:1vw;
   overflow:hidden;
   position:fixed;
   text-align: center;
@@ -45,23 +45,22 @@ html, body {
 
 .flashcard-container {
   min-height: 200px;
-  width:100%;
-  margin-top: 7%;
+  width: 100vw;
+  margin-top: 15vh;
 }
 
 .moreinfo {
   background-color:black;
-  width:100%;
+  width:100vw;
 }
 
 .moreless {
-  background:none!important;
-  color:inherit;
-  border:none; 
-  padding:0!important;
+  background: none!important;
+  color: inherit;
+  border: none; 
+  padding: 0!important;
   font: inherit;
-  /*border is optional*/
-  border-bottom:1px solid #444; 
+  border-bottom: 1px solid #444; 
   cursor: pointer;
 }
 
@@ -72,7 +71,7 @@ html, body {
 
 .headerlink :hover {
 	text-decoration: none;
-  	color:black;
+  color:black;
 }
 
 .done .tooltiptext {
@@ -83,11 +82,9 @@ html, body {
   text-align: center;
   padding: 5px 0;
   border-radius: 6px;
-  top: 100%;
-  left: 50%; 
+  top: 100vh;
+  left: 50vw; 
   margin-left: -60px;
- 
-  /* Position the tooltip text - see examples below! */
   position: absolute;
   z-index: 1;
 }
@@ -97,25 +94,25 @@ html, body {
 }
 
 .full {
-  width:100%;
+  width:100vw;
   text-align:center;
-  margin-top:20%;
+  margin-top:20vh;
 }
 .ad {
   background-color:rgba(0,0,0,.5);
-  width:100%;
-  height:100%;
+  width:100vw;
+  height:100vh;
   position:fixed;
   z-index: 10
 }
 .ad-contentt {
 	background-color: rgba(255,255,255);
-	width: 60%;
-	height: 65%;
+	width: 60vw;
+	height: 65vh;
   margin: 0 auto;
   padding: 10px;
   position: relative;
-	margin-top:7.5%;
+	margin-top:7.5vh;
 	border-radius:25px;
 	z-index: 1000;
 }
@@ -132,12 +129,12 @@ html, body {
 }
 
 .panel{
-  border-radius:5% !important;
+  border-radius: 5% !important;
   overflow:hidden;
 }
 
 .img-responsive{
-	width:100%;
+	width:100vw;
 }
 
 .offleft{
@@ -149,36 +146,28 @@ html, body {
 }
 #loading {
 	position: fixed !important;
-	width: 100%;
+	width: 100vw;
 	height: 100vh;
 	background: #fff url('https://lukaja21.github.io/Quizlit/media/loader.gif') no-repeat center center;
 	z-index: 9999;
   margin-top:-5%;
 }
 
-.logo {
-	margin-top:-7px;
-}
-
-.logo-title {
-	margin-left:-10px;
-}
-
 .navbar-brand {
-  width:30px;
+  width: 4vh;
 }
 
 .container {
-  margin-top:7%;
+  margin-top:7vh;
 }
 
 .info-header {
   font-size:25px;
-  margin-top:5%;
+  margin-top:5vh;
 }
 
 .pricing {
-  margin-top: -8%;
+  margin-top: -8vh;
 }
 
 .changelog {
@@ -204,14 +193,14 @@ html, body {
 }
 
 .set-container {
-  width:100%;
-  height:10%;
+  width:100vw;
+  height:10vh;
   background-color:white;
   -moz-box-shadow: 0 0 10px #ccc;
   -webkit-box-shadow: 0 0 10px #ccc;
   box-shadow: 0 0 10px #ccc;
-  margin-top:3%;
-  font-size: 300%
+  margin-top: 3vh;
+  font-size: 300%;
 }
 
 .text-divider {
@@ -235,14 +224,14 @@ html, body {
 }
 
 .subject-container {
-  margin-bottom:15%;
-  margin-top: 10%;
-  height:100%;
-  width:100%
+  margin-bottom:15vh;
+  margin-top: 10vh;
+  height:100vh;
+  width:100vw;
 }
 
 .subject-nav {
-  margin-top: 1%;
+  margin-top: 1vh;
 }
 
 .no-sets-warning {
@@ -331,52 +320,26 @@ html, body {
  }
 
  .accesibility-button {
-    position: fixed;
-    bottom: 0;
-    right: 0;
-    margin-right: 5px;
-    margin-bottom: 5px;
-    width: 50px;
-    height: 50px;
-    border-radius: 100%;
-    background-color: rgb(75, 75, 75);
-    text-align: center;
-    vertical-align: middle;
-    line-height: 50px;
-    color:white;
-    font-size: 25px;
- }
-
- .accesibility-menu {
   position: fixed;
   bottom: 0;
   right: 0;
-  margin-right: 53px;
-  margin-bottom: 25px;
-  border-radius: 10%;
-  background-color: lightgrey;
-  height:500px;
-  width: 300px
-}
+  margin-right: 5px;
+  margin-bottom: 5px;
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  background-color: rgb(75, 75, 75);
+  text-align: center;
+  vertical-align: middle;
+  line-height: 50px;
+  color:white;
+  font-size: 25px;
+ }
 
-/* Dropdown Button */
-.dropbtn {
-  background-color: #4CAF50;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-  margin-left: 15px;
-  margin-top: 15px;
-}
-
-/* Dropdown button on hover & focus */
 .dropbtn:hover, .dropbtn:focus {
   background-color: #3e8e41;
 }
 
-/* The search field */
 #myInput {
   box-sizing: border-box;
   background-image: url('searchicon.png');
@@ -388,17 +351,16 @@ html, body {
   border-bottom: 1px solid #ddd;
 }
 
-/* The search field when it gets focus/clicked on */
-#myInput:focus {outline: 3px solid #ddd;}
+#myInput:focus {
+  outline: 3px solid #ddd;
+}
 
-/* The container <div> - needed to position the dropdown content */
 .dropdown {
   position: relative;
   display: inline-block;
   margin-left: 10px;
 }
 
-/* Dropdown Content (Hidden by Default) */
 .dropdown-content {
   display: none;
   position: absolute;
@@ -410,7 +372,6 @@ html, body {
   overflow: auto;
 }
 
-/* Links inside the dropdown */
 .dropdown-content a {
   color: black;
   padding: 12px 16px;
@@ -418,8 +379,10 @@ html, body {
   display: block;
 }
 
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #f1f1f1}
+.dropdown-content a:hover {
+  background-color: #f1f1f1
+}
 
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {display:block;}
+.show {
+  display:block;
+}
