--- a/games/image_2048/2048 Hack Version_files/main.css
+++ b/games/image_2048/2048 Hack Version_files/main.css
@@ -310,86 +310,70 @@ hr {
 .tile, .tile .tile-inner {
   width: 107px;
   height: 107px;
-  line-height: 107px; }
+  line-height: 116.25px; }
 .tile.tile-position-1-1 {
   -webkit-transform: translate(0px, 0px);
   -moz-transform: translate(0px, 0px);
-  -ms-transform: translate(0px, 0px);
   transform: translate(0px, 0px); }
 .tile.tile-position-1-2 {
   -webkit-transform: translate(0px, 121px);
   -moz-transform: translate(0px, 121px);
-  -ms-transform: translate(0px, 121px);
   transform: translate(0px, 121px); }
 .tile.tile-position-1-3 {
   -webkit-transform: translate(0px, 242px);
   -moz-transform: translate(0px, 242px);
-  -ms-transform: translate(0px, 242px);
   transform: translate(0px, 242px); }
 .tile.tile-position-1-4 {
   -webkit-transform: translate(0px, 363px);
   -moz-transform: translate(0px, 363px);
-  -ms-transform: translate(0px, 363px);
   transform: translate(0px, 363px); }
 .tile.tile-position-2-1 {
   -webkit-transform: translate(121px, 0px);
   -moz-transform: translate(121px, 0px);
-  -ms-transform: translate(121px, 0px);
   transform: translate(121px, 0px); }
 .tile.tile-position-2-2 {
   -webkit-transform: translate(121px, 121px);
   -moz-transform: translate(121px, 121px);
-  -ms-transform: translate(121px, 121px);
   transform: translate(121px, 121px); }
 .tile.tile-position-2-3 {
   -webkit-transform: translate(121px, 242px);
   -moz-transform: translate(121px, 242px);
-  -ms-transform: translate(121px, 242px);
   transform: translate(121px, 242px); }
 .tile.tile-position-2-4 {
   -webkit-transform: translate(121px, 363px);
   -moz-transform: translate(121px, 363px);
-  -ms-transform: translate(121px, 363px);
   transform: translate(121px, 363px); }
 .tile.tile-position-3-1 {
   -webkit-transform: translate(242px, 0px);
   -moz-transform: translate(242px, 0px);
-  -ms-transform: translate(242px, 0px);
   transform: translate(242px, 0px); }
 .tile.tile-position-3-2 {
   -webkit-transform: translate(242px, 121px);
   -moz-transform: translate(242px, 121px);
-  -ms-transform: translate(242px, 121px);
   transform: translate(242px, 121px); }
 .tile.tile-position-3-3 {
   -webkit-transform: translate(242px, 242px);
   -moz-transform: translate(242px, 242px);
-  -ms-transform: translate(242px, 242px);
   transform: translate(242px, 242px); }
 .tile.tile-position-3-4 {
   -webkit-transform: translate(242px, 363px);
   -moz-transform: translate(242px, 363px);
-  -ms-transform: translate(242px, 363px);
   transform: translate(242px, 363px); }
 .tile.tile-position-4-1 {
   -webkit-transform: translate(363px, 0px);
   -moz-transform: translate(363px, 0px);
-  -ms-transform: translate(363px, 0px);
   transform: translate(363px, 0px); }
 .tile.tile-position-4-2 {
   -webkit-transform: translate(363px, 121px);
   -moz-transform: translate(363px, 121px);
-  -ms-transform: translate(363px, 121px);
   transform: translate(363px, 121px); }
 .tile.tile-position-4-3 {
   -webkit-transform: translate(363px, 242px);
   -moz-transform: translate(363px, 242px);
-  -ms-transform: translate(363px, 242px);
   transform: translate(363px, 242px); }
 .tile.tile-position-4-4 {
   -webkit-transform: translate(363px, 363px);
   -moz-transform: translate(363px, 363px);
-  -ms-transform: translate(363px, 363px);
   transform: translate(363px, 363px); }
 
 .tile {
@@ -478,42 +462,36 @@ hr {
     opacity: 0;
     -webkit-transform: scale(0);
     -moz-transform: scale(0);
-    -ms-transform: scale(0);
     transform: scale(0); }
 
   100% {
     opacity: 1;
     -webkit-transform: scale(1);
     -moz-transform: scale(1);
-    -ms-transform: scale(1);
     transform: scale(1); } }
 @-moz-keyframes appear {
   0% {
     opacity: 0;
     -webkit-transform: scale(0);
     -moz-transform: scale(0);
-    -ms-transform: scale(0);
     transform: scale(0); }
 
   100% {
     opacity: 1;
     -webkit-transform: scale(1);
     -moz-transform: scale(1);
-    -ms-transform: scale(1);
     transform: scale(1); } }
 @keyframes appear {
   0% {
     opacity: 0;
     -webkit-transform: scale(0);
     -moz-transform: scale(0);
-    -ms-transform: scale(0);
     transform: scale(0); }
 
   100% {
     opacity: 1;
     -webkit-transform: scale(1);
     -moz-transform: scale(1);
-    -ms-transform: scale(1);
     transform: scale(1); } }
 .tile-new .tile-inner {
   -webkit-animation: appear 200ms ease 100ms;
@@ -527,55 +505,46 @@ hr {
   0% {
     -webkit-transform: scale(0);
     -moz-transform: scale(0);
-    -ms-transform: scale(0);
     transform: scale(0); }
 
   50% {
     -webkit-transform: scale(1.2);
     -moz-transform: scale(1.2);
-    -ms-transform: scale(1.2);
     transform: scale(1.2); }
 
   100% {
     -webkit-transform: scale(1);
     -moz-transform: scale(1);
-    -ms-transform: scale(1);
     transform: scale(1); } }
 @-moz-keyframes pop {
   0% {
     -webkit-transform: scale(0);
     -moz-transform: scale(0);
-    -ms-transform: scale(0);
     transform: scale(0); }
 
   50% {
     -webkit-transform: scale(1.2);
     -moz-transform: scale(1.2);
-    -ms-transform: scale(1.2);
     transform: scale(1.2); }
 
   100% {
     -webkit-transform: scale(1);
     -moz-transform: scale(1);
-    -ms-transform: scale(1);
     transform: scale(1); } }
 @keyframes pop {
   0% {
     -webkit-transform: scale(0);
     -moz-transform: scale(0);
-    -ms-transform: scale(0);
     transform: scale(0); }
 
   50% {
     -webkit-transform: scale(1.2);
     -moz-transform: scale(1.2);
-    -ms-transform: scale(1.2);
     transform: scale(1.2); }
 
   100% {
     -webkit-transform: scale(1);
     -moz-transform: scale(1);
-    -ms-transform: scale(1);
     transform: scale(1); } }
 .tile-merged .tile-inner {
   z-index: 20;
@@ -611,7 +580,7 @@ hr {
   float: right; }
 
 .game-explanation {
-  margin-top: 30px; }
+  margin-top: 50px; }
 
 .sharing {
   margin-top: 20px;
@@ -625,8 +594,8 @@ hr {
     font-size: 15px; }
 
   body {
-    margin-top: 0;
-    padding: 20px; }
+    margin: 20px 0;
+    padding: 0 20px; }
 
   h1.title {
     font-size: 27px;
@@ -780,86 +749,70 @@ hr {
   .tile, .tile .tile-inner {
     width: 58px;
     height: 58px;
-    line-height: 58px; }
+    line-height: 67.5px; }
   .tile.tile-position-1-1 {
     -webkit-transform: translate(0px, 0px);
     -moz-transform: translate(0px, 0px);
-    -ms-transform: translate(0px, 0px);
     transform: translate(0px, 0px); }
   .tile.tile-position-1-2 {
     -webkit-transform: translate(0px, 67px);
     -moz-transform: translate(0px, 67px);
-    -ms-transform: translate(0px, 67px);
     transform: translate(0px, 67px); }
   .tile.tile-position-1-3 {
     -webkit-transform: translate(0px, 135px);
     -moz-transform: translate(0px, 135px);
-    -ms-transform: translate(0px, 135px);
     transform: translate(0px, 135px); }
   .tile.tile-position-1-4 {
     -webkit-transform: translate(0px, 202px);
     -moz-transform: translate(0px, 202px);
-    -ms-transform: translate(0px, 202px);
     transform: translate(0px, 202px); }
   .tile.tile-position-2-1 {
     -webkit-transform: translate(67px, 0px);
     -moz-transform: translate(67px, 0px);
-    -ms-transform: translate(67px, 0px);
     transform: translate(67px, 0px); }
   .tile.tile-position-2-2 {
     -webkit-transform: translate(67px, 67px);
     -moz-transform: translate(67px, 67px);
-    -ms-transform: translate(67px, 67px);
     transform: translate(67px, 67px); }
   .tile.tile-position-2-3 {
     -webkit-transform: translate(67px, 135px);
     -moz-transform: translate(67px, 135px);
-    -ms-transform: translate(67px, 135px);
     transform: translate(67px, 135px); }
   .tile.tile-position-2-4 {
     -webkit-transform: translate(67px, 202px);
     -moz-transform: translate(67px, 202px);
-    -ms-transform: translate(67px, 202px);
     transform: translate(67px, 202px); }
   .tile.tile-position-3-1 {
     -webkit-transform: translate(135px, 0px);
     -moz-transform: translate(135px, 0px);
-    -ms-transform: translate(135px, 0px);
     transform: translate(135px, 0px); }
   .tile.tile-position-3-2 {
     -webkit-transform: translate(135px, 67px);
     -moz-transform: translate(135px, 67px);
-    -ms-transform: translate(135px, 67px);
     transform: translate(135px, 67px); }
   .tile.tile-position-3-3 {
     -webkit-transform: translate(135px, 135px);
     -moz-transform: translate(135px, 135px);
-    -ms-transform: translate(135px, 135px);
     transform: translate(135px, 135px); }
   .tile.tile-position-3-4 {
     -webkit-transform: translate(135px, 202px);
     -moz-transform: translate(135px, 202px);
-    -ms-transform: translate(135px, 202px);
     transform: translate(135px, 202px); }
   .tile.tile-position-4-1 {
     -webkit-transform: translate(202px, 0px);
     -moz-transform: translate(202px, 0px);
-    -ms-transform: translate(202px, 0px);
     transform: translate(202px, 0px); }
   .tile.tile-position-4-2 {
     -webkit-transform: translate(202px, 67px);
     -moz-transform: translate(202px, 67px);
-    -ms-transform: translate(202px, 67px);
     transform: translate(202px, 67px); }
   .tile.tile-position-4-3 {
     -webkit-transform: translate(202px, 135px);
     -moz-transform: translate(202px, 135px);
-    -ms-transform: translate(202px, 135px);
     transform: translate(202px, 135px); }
   .tile.tile-position-4-4 {
     -webkit-transform: translate(202px, 202px);
     -moz-transform: translate(202px, 202px);
-    -ms-transform: translate(202px, 202px);
     transform: translate(202px, 202px); }
 
   .tile .tile-inner {
@@ -966,7 +919,7 @@ hr {
     opacity: 1;
     top: -45px;
     pointer-events: auto; }
-  @media screen and (max-width: 520px) {
+  @media screen and (max-width: 480px) {
     .btc-donate {
       width: 120px; }
       .btc-donate .address {
@@ -977,203 +930,3 @@ hr {
         .btc-donate .address:after {
           left: 50%;
           bottom: 2px; } }
-
-@-webkit-keyframes pop-in-big {
-  0% {
-    -webkit-transform: scale(0) translateZ(0);
-    -moz-transform: scale(0) translateZ(0);
-    transform: scale(0) translateZ(0);
-    opacity: 0;
-    margin-top: -40px; }
-
-  100% {
-    -webkit-transform: scale(1) translateZ(0);
-    -moz-transform: scale(1) translateZ(0);
-    transform: scale(1) translateZ(0);
-    opacity: 1;
-    margin-top: 30px; } }
-@-moz-keyframes pop-in-big {
-  0% {
-    -webkit-transform: scale(0) translateZ(0);
-    -moz-transform: scale(0) translateZ(0);
-    transform: scale(0) translateZ(0);
-    opacity: 0;
-    margin-top: -40px; }
-
-  100% {
-    -webkit-transform: scale(1) translateZ(0);
-    -moz-transform: scale(1) translateZ(0);
-    transform: scale(1) translateZ(0);
-    opacity: 1;
-    margin-top: 30px; } }
-@keyframes pop-in-big {
-  0% {
-    -webkit-transform: scale(0) translateZ(0);
-    -moz-transform: scale(0) translateZ(0);
-    transform: scale(0) translateZ(0);
-    opacity: 0;
-    margin-top: -40px; }
-
-  100% {
-    -webkit-transform: scale(1) translateZ(0);
-    -moz-transform: scale(1) translateZ(0);
-    transform: scale(1) translateZ(0);
-    opacity: 1;
-    margin-top: 30px; } }
-@-webkit-keyframes pop-in-small {
-  0% {
-    -webkit-transform: scale(0) translateZ(0);
-    -moz-transform: scale(0) translateZ(0);
-    transform: scale(0) translateZ(0);
-    opacity: 0;
-    margin-top: -40px; }
-
-  100% {
-    -webkit-transform: scale(1) translateZ(0);
-    -moz-transform: scale(1) translateZ(0);
-    transform: scale(1) translateZ(0);
-    opacity: 1;
-    margin-top: 10px; } }
-@-moz-keyframes pop-in-small {
-  0% {
-    -webkit-transform: scale(0) translateZ(0);
-    -moz-transform: scale(0) translateZ(0);
-    transform: scale(0) translateZ(0);
-    opacity: 0;
-    margin-top: -40px; }
-
-  100% {
-    -webkit-transform: scale(1) translateZ(0);
-    -moz-transform: scale(1) translateZ(0);
-    transform: scale(1) translateZ(0);
-    opacity: 1;
-    margin-top: 10px; } }
-@keyframes pop-in-small {
-  0% {
-    -webkit-transform: scale(0) translateZ(0);
-    -moz-transform: scale(0) translateZ(0);
-    transform: scale(0) translateZ(0);
-    opacity: 0;
-    margin-top: -40px; }
-
-  100% {
-    -webkit-transform: scale(1) translateZ(0);
-    -moz-transform: scale(1) translateZ(0);
-    transform: scale(1) translateZ(0);
-    opacity: 1;
-    margin-top: 10px; } }
-.app-notice {
-  position: relative;
-  -webkit-animation: pop-in-big 700ms ease 2s both;
-  -moz-animation: pop-in-big 700ms ease 2s both;
-  animation: pop-in-big 700ms ease 2s both;
-  background: #edc53f;
-  color: white;
-  padding: 10px;
-  margin-top: 30px;
-  height: 40px;
-  box-sizing: border-box;
-  border-radius: 3px; }
-  .app-notice:after {
-    content: "";
-    display: block;
-    clear: both; }
-  .app-notice .notice-close-button {
-    float: right;
-    font-weight: bold;
-    cursor: pointer;
-    margin-left: 10px;
-    opacity: 0.7; }
-  .app-notice p {
-    margin-bottom: 0; }
-  .app-notice, .app-notice p {
-    line-height: 20px; }
-  .app-notice a {
-    color: white; }
-  @media screen and (max-width: 520px) {
-    .app-notice {
-      -webkit-animation: pop-in-small 700ms ease 2s both;
-      -moz-animation: pop-in-small 700ms ease 2s both;
-      animation: pop-in-small 700ms ease 2s both;
-      margin-top: 10px;
-      height: 40px; } }
-
-.links {
-  text-align: center;
-  margin-top: 20px; }
-
-.privacy {
-  word-wrap: break-word; }
-
-/* extras */
-.sidebar {
-  width: 180px;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  position: fixed;
-  display: flex;
-  align-items: center;
-  justify-content: center; }
-
-@media (max-width: 880px) {
-  .sidebar,
-  .sidebar .adsbygoogle {
-    display: none; } }
-
-
-.under-board-container {
-  margin-top: 38px; }
-
-.under-board-container,
-.under-board-container .adsbygoogle {
-  width: 100%;
-  height: 80px;
-  display: none; }
-
-@media (max-width: 880px) {
-  .under-board-container,
-  .under-board-container .adsbygoogle {
-    display: block; } }
-
-.cookie-notice {
-  position: fixed;
-  font-size: 15px;
-  z-index: 999;
-  right: 20px;
-  bottom: 20px;
-  width: 20%;
-  min-width: 460px;
-  background: #e8e5db;
-  padding: 10px;
-  margin-top: 30px;
-  box-sizing: border-box;
-  border-radius: 3px;
-  display: flex;
-  align-items: center;
-  justify-content: center; }
-  @media screen and (max-width: 520px) {
-    .cookie-notice {
-      width: auto;
-      left: 20px;
-      min-width: auto; } }
-  .cookie-notice, .cookie-notice p a {
-    color: #a09488; }
-  .cookie-notice p {
-    margin-bottom: 0;
-    flex: 1; }
-  .cookie-notice, .cookie-notice p {
-    line-height: 20px; }
-
-.cookie-notice-dismiss-button {
-  display: inline-block;
-  background: #8f7a66;
-  border-radius: 3px;
-  padding: 0 20px;
-  text-decoration: none;
-  color: #f9f6f2;
-  height: 40px;
-  line-height: 42px;
-  cursor: pointer;
-  flex: 0 0 auto;
-  margin-left: 20px; }
