--- a/styles/style.css
+++ b/styles/style.css
@@ -158,7 +158,7 @@ html, body {
 }
 
 .container {
-  margin-top:7vh;
+  margin-top:15vh;
 }
 
 .info-header {
@@ -193,7 +193,7 @@ html, body {
 }
 
 .set-container {
-  width:80vw;
+  width:60vw;
   height:10vh;
   background-color:white;
   -moz-box-shadow: 0 0 10px #ccc;
@@ -239,8 +239,8 @@ html, body {
 }
 
 .set-thumbnail {
-  max-width:80%;
-  max-height:80%;
+  width:5vh;
+  height:5vh;
   vertical-align: middle
   margin-left:10%;
 }
@@ -326,7 +326,7 @@ html, body {
   margin-right: .5vw;
   margin-bottom: .5vw;
   width: 3vw;
-  height: 5.5vh;
+  height: 3vw;
   border-radius: 100%;
   background-color: rgb(75, 75, 75);
   text-align: center;
