--- a/styles/style.css
+++ b/styles/style.css
@@ -42,6 +42,18 @@ html, body {
   border-radius: 5px;
 }
 
+.sidebar-right {
+  width:7.5vw;
+  height:15vh;
+  background-color:rgb(239, 237, 237);
+  float:right;
+  margin-left:91vw;
+  overflow:hidden;
+  position:fixed;
+  text-align: center;
+  border-radius: 5px;
+}
+
 .flashcard-container {
   min-height: 200px;
   width: 100vw;
@@ -162,7 +174,7 @@ html, body {
 
 .info-header {
   font-size:25px;
-  margin-top:5vh;
+  margin-top:1vh;
 }
 
 .pricing {
@@ -366,7 +378,6 @@ html, body {
   background-color: #f6f6f6;
   min-width: 230px;
   border: 1px solid #ddd;
-  z-index: 1;
   max-height: 400px;
   overflow: auto;
 }
@@ -386,12 +397,6 @@ html, body {
   display:block;
 }
 
-#search-dropdown {
-  position: absolute;
-  top: 80vh;
-  right: 12.5vw;
-}
-
 .hub-icon {
   width: 15vw;
   height: 15vw;
@@ -408,4 +413,73 @@ html, body {
   width: 95vw;
   margin-top: 5vh;
   margin-left: 2.5vw;
+}
+
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+.flashcard-count {
+  display: table;
+  margin: 0 auto;
+  font-size: 20px;
 }
