--- a/styles/style.css
+++ b/styles/style.css
@@ -33,7 +33,8 @@ html, body {
 .sidebar {
   width:12.5vw;
   height:42.5vh;
-  background-color:rgb(239, 237, 237);
+  background-color:white;
+  border: 2px solid lightgrey;
   float:left;
   margin-left:1vw;
   overflow:hidden;
@@ -45,7 +46,7 @@ html, body {
 .sidebar-right {
   width:7.5vw;
   height:15vh;
-  background-color:rgb(239, 237, 237);
+  border: 2px solid lightgrey;
   float:right;
   margin-left:91vw;
   overflow:hidden;
@@ -339,7 +340,6 @@ html, body {
   width: 3vw;
   height: 3vw;
   border-radius: 100%;
-  background-color: rgb(75, 75, 75);
   text-align: center;
   vertical-align: middle;
   line-height: 50px;
@@ -482,4 +482,8 @@ input:checked + .slider:before {
   display: table;
   margin: 0 auto;
   font-size: 20px;
+}
+
+.fas {
+  color: black
 }
